<resources>
    <string name="app_name">FormerRoid</string>
    <string name="title_section1">번호</string>
    <string name="title_section2">시간</string>
    <string name="title_section3">위치</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_former_roid">FormerRoid</string>
    <string name="list_layer_title">list</string>
    <string name="map_layer_title">map</string>
    <string name="insert_btn">등록</string>
    <string name="cancel">취소</string>
    <string name="search_btn">주소록에서 찾기</string>
	<string name="period_config_onoff">시간 설정 On/Off</string>
    <string name="txt_name">이름</string>
    <string name="txt_tel">전화번호</string>
    <string name="txt_ring_mode">모드</string>
    <string name="txt_ring_mode_option">옵션</string>
    <string name="txt_ring_mode_none">무음</string>
    <string name="txt_ring_mode_ring">벨</string>
    <string name="txt_ring_mode_vibrator">진동</string>
    <string name="label_sunday">일</string>
    <string name="label_monday">월</string>
    <string name="label_tuesday">화</string>
    <string name="label_wednesday">수</string>
    <string name="label_thursday">목</string>
    <string name="label_friday">금</string>
    <string name="label_saturday">토</string>
    <string name="label_start_time">시작시간</string>
    <string name="label_finish_time">종료시간</string>
    <string name="label_from"> ~ </string>
    <string name="hint_title">제목</string>
    <string name="info_img">Mode Image</string>
    <string name="info_off_period">시간 설정 : Off</string>
    <string name="info_on_period">시간 설정 : On </string>
    
</resources>