<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color"
    >
	<Switch android:id="@+id/periodOnOffSwitch" 
	    android:text="@string/period_config_onoff"
    	android:checked="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:layout_margin="10dip" 
        />
    <EditText android:id="@+id/periodTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_title"
        android:textSize="25sp"
        android:maxLines="1"
        android:maxLength="20"
        />
    <LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:gravity="center_horizontal"
    	>
    	<EditText android:id="@+id/startPeriod"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="25sp"
	        android:hint="@string/label_start_time"
	        android:editable="false"
        />
    	<TextView 
    	    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text=" ~ "
	        android:textSize="25sp"
	        />
    	<EditText android:id="@+id/finishPeriod"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:hint="@string/label_finish_time"
	        android:textSize="25sp"
	        android:editable="false"
        />    
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/checkboxLayout"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:gravity="center_horizontal"
    	>
    	<CheckBox android:id="@+id/sun"
    	    android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    	    android:text="@string/label_sunday"
    	    />
    	<CheckBox android:id="@+id/mon"
    	    android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    	    android:text="@string/label_monday"/>
    	<CheckBox android:id="@+id/tue"
    	    android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    	    android:text="@string/label_tuesday"/>
    	<CheckBox android:id="@+id/wed"
    	    android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    	    android:text="@string/label_wednesday"/>
    	<CheckBox android:id="@+id/thu"
    	    android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    	    android:text="@string/label_thursday"/>
    	<CheckBox android:id="@+id/fri"
    	    android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    	    android:text="@string/label_friday"/>
    	<CheckBox android:id="@+id/sat"
    	    android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    	    android:text="@string/label_saturday"/>
   	</LinearLayout>    
 
    <LinearLayout 
        android:id="@+id/timeLayout"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:gravity="center_vertical"
    	>    
	    <!-- 
	    <TimePicker
	        android:id="@+id/startTimePicker"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        />
	    <TimePicker
	        android:id="@+id/finishTimePicker"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        />
	         -->
    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:orientation="vertical" 
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        >
        <RadioGroup
	            android:id="@+id/period_ring_mode"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" 
	            >
        
	            <RadioButton
	                android:id="@+id/ring_mode_0"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:checked="true"
	                android:text="@string/txt_ring_mode_none"
	                android:textSize="25sp" />
	
	            <RadioButton
	                android:id="@+id/ring_mode_1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/txt_ring_mode_vibrator"
	                android:textSize="25sp" />
	
	            <RadioButton
	                android:id="@+id/ring_mode_2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/txt_ring_mode_ring"
	                android:textSize="25sp" />
	    </RadioGroup>

	</RelativeLayout>
	<Button android:id="@+id/insertPeriodBtn"
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	        android:text="@string/insert_btn"
	        android:background="@drawable/button_selector"
	        android:textColor="@color/btn_label_color"
	        />
	
	<LinearLayout android:id="@+id/chartLayout"
	    android:layout_width="match_parent"
        android:layout_height="match_parent"
	    />
</LinearLayout>