<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center" 
    android:background="@color/bg_color"
    >

    <LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	>    
    	
	    <TimePicker
	        android:id="@+id/startTimePicker"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        />
	    <TimePicker
	        android:id="@+id/finishTimePicker"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:orientation="vertical" 
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        >

        <EditText
            android:id="@+id/contactName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:ems="15"
            android:hint="@string/txt_name"
            android:inputType="text"
            android:maxLength="15"
            android:textSize="25sp" 
            />
        
        <EditText
            android:id="@+id/contactNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contactName"
            android:ems="15"
            android:hint="@string/txt_tel"
            android:inputType="phone"
            android:maxLength="20"
            android:textSize="25sp" 
            />
        
        <RadioGroup
	            android:id="@+id/ring_mode"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" 
	            android:layout_below="@id/contactNumber"
	            >
        
	            <RadioButton
	                android:id="@+id/ring_mode_0"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:checked="true"
	                android:text="@string/txt_ring_mode_none"
	                android:textSize="25sp" />
	
	            <RadioButton
	                android:id="@+id/ring_mode_1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/txt_ring_mode_vibrator"
	                android:textSize="25sp" />
	
	            <RadioButton
	                android:id="@+id/ring_mode_2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/txt_ring_mode_ring"
	                android:textSize="25sp" />
	    </RadioGroup>

	</RelativeLayout>
	<Button
		    android:id="@+id/searchBtn"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/search_btn"
		    android:textSize="20sp" 
		    android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="10dp"
		    />
</LinearLayout>